--- a/index.html
+++ b/index.html
@@ -120,6 +120,16 @@
             </svg>
           </button> -->
         </div>
+
+        <p class="copyright">
+          &copy; Copyright by
+          <a
+            class="twitter-link"
+            target="_blank"
+            href="https://github.com/HazemAAbdeltwab"
+            >Hazem F-E</a
+          >
+        </p>
       </div>
 
       <div class="recipe">
